@@ -197,18 +197,18 @@ Determines which tooling to generate the distribution with
 If true, use `[BumpVersionAfterRelease]`  and `[RewriteVersions::Sanitized]` instead of `[PkgVersion]` and
 `[Git::NextVersion::Sanitized]`
 
-## `copyfiles`
+## `copy_files`
 
 An array of files generated by `Dist::Zilla` build to copy from the built dist back to the source dist
 
 If not specified, the default contents are as follows:
 
-    copyfiles = LICENSE
-    copyfiles = Makefile.PL
+    copy_files = LICENSE
+    copy_files = Makefile.PL
 
 These defaults can be wiped with:
 
-    copyfiles = none
+    copy_files = none
 
 ## `src_readme`
 
